// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`webhooks Node.js snippet generation express request should match fixture for "empty" 1`] = `Object {}`;

exports[`webhooks Node.js snippet generation express request should match fixture for "empty-default" 1`] = `
Object {
  "security": Object {
    "petstore_auth": Object {
      "line": 24,
    },
  },
  "server": Object {
    "name": Object {
      "line": 21,
    },
  },
}
`;

exports[`webhooks Node.js snippet generation express request should match fixture for "security-and-server-variables" 1`] = `
Object {
  "security": Object {
    "basic_auth": Object {
      "line": 26,
    },
    "petstore_auth": Object {
      "line": 25,
    },
  },
  "server": Object {
    "name": Object {
      "line": 21,
    },
    "port": Object {
      "line": 22,
    },
  },
}
`;

exports[`webhooks Node.js snippet generation express request should match fixture for "security-types" 1`] = `
Object {
  "security": Object {
    "api_key": Object {
      "line": 21,
    },
    "http_basic": Object {
      "line": 22,
    },
    "http_bearer": Object {
      "line": 23,
    },
    "oauth2": Object {
      "line": 24,
    },
  },
}
`;

exports[`webhooks Node.js snippet generation express request should match fixture for "security-variables" 1`] = `
Object {
  "security": Object {
    "basic_auth": Object {
      "line": 22,
    },
    "petstore_auth": Object {
      "line": 21,
    },
  },
}
`;

exports[`webhooks Node.js snippet generation express request should match fixture for "server-variables" 1`] = `
Object {
  "server": Object {
    "name": Object {
      "line": 21,
    },
    "port": Object {
      "line": 22,
    },
  },
}
`;
